@@ -1,4 +1,4 @@
-# $Id: Changes,v 1.34 2003/07/22 14:50:52 petdance Exp $
+# $Id: Changes,v 1.35 2003/07/22 14:59:10 petdance Exp $
 Revision history for Perl extension WWW::Mechanize
 
 0.55
@@ -8,6 +8,9 @@ Revision history for Perl extension WWW::Mechanize
 
 	* The WWW::Mechanize::Link object now tracks what tag the link
 	  came from (<A>, <FRAME> or <IFRAME>).
+
+	[DOCUMENTATION]
+	* Moved the deprecated methods to their own section.
 
 0.54	July 20, 2003  12:47am
 	[THINGS THAT MIGHT BREAK YOUR CODE]
